@@ -1,5 +1,7 @@
-<%= @title = 'Download CruiseControl.rb' %>
+<% @title = 'Download CruiseControl.rb' %>
 
-* Get the current version (<%= CruiseControl::VERSION::STRING %>) and earlier versions at "RubyForge":http://rubyforge.org/frs/?group_id=2918
+<strong>"Download":http://rubyforge.org/frs/?group_id=2918</strong> the latest CruiseControl.rb release from
+"RubyForge":http://rubyforge.org/frs/?group_id=2918.
+
 
 <div class="next_step">Next step: "install and get started":getting_started.html</div>
