@@ -4,7 +4,6 @@
   <title>CruiseControl.rb<%= @title ? " - " + @title : '' %></title>
   <%= stylesheet_link_tag 'cruisecontrol', :media => 'all' %>
   <%= stylesheet_link_tag 'documentation', :media => 'all' %>
-  <%= auto_discovery_link_tag :rss, {:action => 'index', :format => 'rss'}, {:title => "RSS feed"} %>
   <%= javascript_include_tag :defaults %>
 </head>
 
